# tcp_udp_services

./: README.md
listeners/: api.py  tcp_transceiver.py  udpTest.py
mobile_tcp_service/: CMakeLists.txt  client  client.cpp  server.cpp
mobile_tcp_service/debug/: server
mobile_tcp_service/debug/tester/: CMakeLists.txt  hello.proto
mobile_tcp_service/protobuf/: CMakeLists.txt
mobile_tcp_service/protobuf/cmake/: DrivesMacros.cmake
mobile_tcp_service/protobuf/message_definitions/: CMakeLists.txt
mobile_tcp_service/protobuf/message_definitions/mobile_message_definitions/: CMakeLists.txt
mobile_tcp_service/protobuf/message_definitions/mobile_message_definitions/include/: proto_serialize.hpp
mobile_tcp_service/protobuf/message_definitions/mobile_message_definitions/messages/dummy/: hello.proto
mobile_tcp_service/protobuf/proto_socket/: CMakeLists.txt  client.cpp  server.cpp  spline0  transceiver.cpp  transceiver_mpc.cpp
mobile_tcp_service/protobuf/protobuf_src/cmake/protobuf/: protobuf-targets-debug.cmake  protobuf-targets-release.cmake
mobile_tcp_service/protobuf/protobuf_src/lib/: libprotobuf-lite.so.3.11.2.0  libprotoc.so.3.11.2.0
mobile_tcp_service/protobuf/protobuf_src/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
mobile_tcp_service/tester/: test.cpp
tcp-gps-vehicle-tracker/: Dockerfile  echo_server.py
tcp_legacy_template/: ReadME.txt  tcp_service.py
udp_cacheservicenbiot/: Dockerfile  UDPService.py
udp_cacheservicenbiot/cacheNBIOT/: cache012019021501
